--- a/public/a/index.html
+++ b/public/a/index.html
@@ -18,7 +18,7 @@
         <script src="/lib/js/jquery.qrcode.min.js"></script>
         <script src="/lib/js/jquery.ajaxfileupload.js"></script>
 		<script src="/lib/js/ajax-form.js"></script>
-		<script src="/lib/js/script.js"></script>
+		<script src="/lib/js/u.js"></script>
 		<script src="/lib/js/a.js"></script>
 	</body>
 </html>
