--- a/public/s/view.html
+++ b/public/s/view.html
@@ -1,28 +1,31 @@
 ﻿
 <!-- css -->
 
-
 <div id="main-wrapper">
-    <div>
-        <h1>查看讲座</h1>
-        <p>
-            讲座名称：<span id="lectname"></span>
-        </p>
-        <p>
-            讲座序列号：<span id="lectkey"></span>
-        </p>
-        <p>
-            二维码：<span id="qrcode"></span>
-        </p>
-        <p>
-            我的昵称：<span id="spkname"></span>
-        </p>
-    </div>
-    <div>
-         <button href="#/reaction" class="btn btn-primary btn-lg btn-block">听众动态</button>
-         <button href="#/share" class="btn btn-primary btn-lg btn-block">共享文件</button>
-         <button href="" class="btn btn-primary btn-lg btn-block">环节设置</button>
-         <button id="btn-close" class="btn btn-primary btn-lg btn-block">退出空间</button>
+	<h1>查看讲座</h1>
+	<ul class="list-group">
+		<li class="list-group-item">
+			<span class="li-label">讲座名称</span>
+			<span id="lectname"></span>
+		</li>
+		<li class="list-group-item">
+			<span class="li-label">讲座序列号</span>
+			<span id="lectkey"></span>
+		</li>
+		<li class="list-group-item">
+			<span class="li-label">二维码</span>
+			<span id="qrcode"></span>
+		</li>
+		<li class="list-group-item">
+			<span class="li-label">我的昵称</span>
+			<span id="spkname"></span>
+		</li>
+	</ul>
+    <div class="btn-group-vertical">
+         <button href="#/reaction" class="btn btn-default btn-lg btn-block">听众动态</button>
+         <button href="#/share" class="btn btn-default btn-lg btn-block">共享文件</button>
+         <button href="" class="btn btn-default btn-lg btn-block">环节设置</button>
+         <button id="btn-close" class="btn btn-danger btn-lg btn-block">退出空间</button>
     </div>
 </div>
 
