--- a/public/a/reaction.html
+++ b/public/a/reaction.html
@@ -1,10 +1,7 @@
 
 
 <div id="main-wrapper">
-    <p>
-        <a href="#/view">返回主页</a>
-    </p>
-
+    <h1>听众反应</h1>
 
     <!-- Nav tabs -->
     <ul class="nav nav-tabs">
@@ -19,7 +16,7 @@
                 <thead>
                 <tr>
                     <th>昵称</th>
-                    <th>发言</th>
+                    <th class="long">发言</th>
                     <th>发言时间</th>
                 </tr>
                 </thead>
@@ -40,7 +37,7 @@
                 <thead>
                 <tr>
                     <th>昵称</th>
-                    <th>在线时间</th>
+                    <th>在线时长</th>
                 </tr>
                 </thead>
 
@@ -56,24 +53,28 @@
 
     $('.nav-tabs a').click(function (e) {
         e.preventDefault();
+		updateAll();
         $(this).tab('show')
     }).first().tab('show');
-
-    getAudienceList();
-    getMsgList();
 
     $('#form-msg').ajaxForm({
         success: function(resObj) {
             var ok = resObj['ok'],
-                    msg = resObj['msg'];
+				msg = resObj['msg'];
             alert(msg);
             if (ok) {
                 reloadFrame();
             }
         }
     });
-
-    function getAudienceList() {
+	
+	updateAll();
+	
+	function updateAll() {
+		updateAudienceList();
+		updateMsgList();
+	}
+    function updateAudienceList() {
         var $tbody = $table_audience.find('tbody');
         $tbody.empty();
         $.ajax({
@@ -97,8 +98,7 @@
             }
         });
     }
-
-    function getMsgList() {
+    function updateMsgList() {
         var $tbody = $table_msg.find('tbody');
         $tbody.empty();
         $.ajax({
@@ -111,7 +111,7 @@
                         $([
                             '<tr>',
                                 '<td>' + msg.audienceName + '</td>',
-                                '<td>' + msg.text + '</td>',
+                                '<td class="long">' + msg.text + '</td>',
                                 '<td>' + strTime(msg.sendtime) + '</td>',
                             '</tr>'
                         ].join('')).appendTo($tbody);
