--- a/public/a/index.html
+++ b/public/a/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>演讲家App</title>
 		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" href="/lib/css/style.css" />
 	</head>
 	<body>
