--- a/public/s/view.html
+++ b/public/s/view.html
@@ -31,7 +31,7 @@
 
 <!-- js -->
 <script>
-    var hostUrl = 'http://baidu.com';
+    var hostUrl = 'http://yjjapp.duapp.com';
 
     $.get('/do/s/view', function(resObj) {
         var lectkey = resObj['lectkey'],
