--- a/public/s/view.html
+++ b/public/s/view.html
@@ -42,7 +42,7 @@
         $('#spkname').text(spkname);
         $('#qrcode').qrcode({
             width: 128, height: 128,
-            text: hostUrl + '/a/join?key=' + lectkey
+            text: hostUrl + '/do/a/join?qr=1&key=' + lectkey
         });
     });
 
