--- a/public/a/join.html
+++ b/public/a/join.html
@@ -27,6 +27,9 @@
         	<div class="form-group">
             	<input type="text" class="form-control" name="key" placeholder="讲座序列号">
             </div>
+            <div class="form-group">
+                <input type="text" class="form-control" name="nick" placeholder="听众昵称">
+            </div>
         	<div class="form-group">
             	<button type="submit" class="btn btn-primary btn-block">加入讲座</button>
             </div>
