--- a/public/s/open.html
+++ b/public/s/open.html
@@ -34,6 +34,9 @@
         <div class="form-group">
             <input type="text" class="form-control" name="lpwd" placeholder="管理密码">
         </div>
+        <div class="form-group">
+            <input type="text" class="form-control" name="nick" placeholder="讲者名称">
+        </div>
 		<div class="form-group">
 			<div class="input-group">
 				<input type="text" class="form-control" name="vcode" placeholder="验证码">
