fileList->fileTaffy, etc remove _.omit(xx, 'lectid')

--- a/public/a/share.html
+++ b/public/a/share.html
@@ -31,8 +31,8 @@
             url: '/do/a/filelist',
             success: function(resObj) {
                 if (resObj['ok']) {
-                    var files = resObj['files'];
-                    _.each(files, function(file) {
+                    var fileList = resObj['fileList'];
+                    _.each(fileList, function(file) {
                         $([
                             '<tr>',
                             '<td>',
