--- a/public/s/index.html
+++ b/public/s/index.html
@@ -13,6 +13,9 @@
 
 		<script src="/lib/js/underscore-min.js"></script>
 		<script src="/lib/js/jquery.min.js"></script>
+        <script src="/lib/js/Chart.min.js"></script>
+        <script src="/lib/js/drawPieChart.js"></script>
+        <script src="/lib/js/drawVerificationCode.js"></script>
 		<script src="/lib/js/store.min.js"></script>
 		<script src="/lib/bootstrap/js/bootstrap.min.js"></script>
 		<script src="/lib/js/jquery.serializeJSON.min.js"></script>
@@ -21,5 +24,6 @@
 		<script src="/lib/js/ajax-form.js"></script>
 		<script src="/lib/js/u.js"></script>
 		<script src="/lib/js/s.js"></script>
+
 	</body>
 </html>
