--- a/public/s/viewvote.html
+++ b/public/s/viewvote.html
@@ -2,6 +2,26 @@
     ul, ol {
         list-style-type: none;
     }
+    #myChart {
+        margin: auto;
+        display: block;
+    }
+    #words {
+        padding-top: 6px;
+        padding-bottom: 6px;
+    }
+    #words > li {
+        padding: 4px;
+    }
+    .square {
+        width: 24px;
+        height: 24px;
+        margin-right: 14px;
+        display: inline-block;
+    }
+    .word {
+        vertical-align: top;
+    }
 </style>
 
 <div id="main-wrapper">
@@ -17,7 +37,9 @@
         </li>
         <li class="list-group-item">
             <span class="li-label">图表结果</span>
-            <span id="result"></span>
+            <div id="result">
+                <canvas id="myChart" width="350" height="350"></canvas>
+            </div>
         </li>
         <li class="list-group-item">
             <span class="li-label">投票人数情况</span>
@@ -27,7 +49,8 @@
 </div>
 
 <script>
-    var vid = 1;
+    var vid = 1,
+        colors = ["#F38630","#E0E4CC","#69D2E7","#5E344C"];
 
     $.get('/do/s/viewvote?vid=' + vid, function(resObj) {
         var vote = resObj['vote'],
@@ -35,16 +58,20 @@
                 options = vote['options'];
         $('#content').text(content);
 
-        var i = 0,
-            wordsHtml = _.reduce(options, function(memo, val, word){
+        var pairs = _.pairs(options),
+            wordsHtml = _.reduce(pairs, function(memo, pair, i){
                 return memo + [
                     '<li>',
-                        '<span>'+ String.fromCharCode(65 + i++)  +'.</span>',
-                        '&nbsp;&nbsp;',
-                        '<span>'+ word +'</span>',
+                        '<div class="square"></div>',
+                        '<span class="word">'+ pair[0] +'</span>',
                     '</li>'
                 ].join('');
             }, '');
         $('#words').html(wordsHtml);
+        $('.square').each(function(i, el) {
+            $(el).css('background-color', colors[i]);
+        });
+        drawPieChart(options, colors);
     });
+
 </script>
