--- a/public/s/votes.html
+++ b/public/s/votes.html
@@ -46,7 +46,7 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary btn-lg btn-block">
-                    开启投票
+                    添加投票
                 </button>
             </form>
         </div>
