--- a/public/s/open.html
+++ b/public/s/open.html
@@ -5,6 +5,23 @@
 		width: 120px;
 		height: 36px;
 	}
+    #form-open * {
+        font-size: 20px;
+    }
+    #form-open .form-group {
+        margin-bottom: 5px;
+    }
+    #form-open .form-control {
+        padding: 12px;
+        height: auto;
+    }
+    #form-open input-group-addon {
+        padding: 3px 6px;
+    }
+    #form-open button {
+        padding: 12px;
+        height: auto;
+    }
 </style>
 
 <div id="main-wrapper">
